<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:gravity="center"
tools:context=".ToDoFragment">
<TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="FICHA TECNICA"
        android:textSize="18dp"
        android:gravity="center"
        />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="180dp"
    android:orientation="vertical"
    android:padding="10dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/orquipedia" />
</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">
    <!--<ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textViewInfor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_notte1"
            android:textSize="20sp" />
    </ScrollView>-->
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textViewTarea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/txt_cont1"
                    android:textStyle="bold"/>

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textViewHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textSize="17sp"
                    android:text="@string/txt_cont2"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textViewTarea2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:text="@string/txt_cont3"
                    android:textStyle="bold"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textViewHora2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:text="@string/txt_cont4"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textViewTarea3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:text="@string/txt_cont5"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textViewHora3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:text="@string/txt_cont6"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textViewHora44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:text="@string/txt_cont7"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textViewHora4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:text="@string/txt_cont8"/>
            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>

</LinearLayout>