<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ToDoFragment">
    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="GENEROS  DE  ORQUIDEAS"
        android:textSize="18dp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:padding="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/orquipedia" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <!--<ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textViewInfor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_notte1"
                android:textSize="20sp" />
        </ScrollView>-->
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textViewTarea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:text="@string/txt_cont1"
                        android:textStyle="bold"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="80dp"
                        android:src="@drawable/genero1"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewHoras"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/txt_gen1"
                        android:textSize="17sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textViewTarea223"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="18sp"
                        android:text="@string/txt_gen2"
                        android:textStyle="bold"/>
                </TableRow>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:src="@drawable/imagenero2"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewHoraszxx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/txt_gen3"
                        android:textSize="17sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textViewTarea2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="18sp"
                        android:text="@string/txt_gen2"
                        android:textStyle="bold"/>
                </TableRow>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:src="@drawable/imagenero3"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewHorasz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/txt_gen5"
                        android:textSize="17sp" />
















                    //////
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textViewTarea22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="18sp"
                        android:text="@string/txt_cont3"
                        android:textStyle="bold"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:src="@drawable/imagenero2" />

                    <TextView
                        android:id="@+id/textViewHora2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/txt_cont4"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewTarea33"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/txt_cont5"
                        android:textSize="18sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewHora35"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/txt_cont6"
                        android:textSize="15sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textViewHora44"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:text="@string/txt_cont7"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textViewHora4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:text="@string/txt_cont8"/>
                </TableRow>

            </TableLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>