<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ToDoFragment">
    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_gen00"
        android:textSize="20sp"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:padding="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/orquipedia" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_gen1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <!--<ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textViewInfor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_notte1"
                android:textSize="20sp" />
        </ScrollView>-->
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="55dp"
                        android:src="@drawable/genero1"/>

                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textViewHora"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:textSize="17sp"
                        android:text="@string/txt_gen2"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="30dp">

                    <TextView
                        android:id="@+id/textViewHora2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/txt_gen3"
                        android:textSize="18sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </TableRow>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:src="@drawable/imagenero2"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textViewTarea3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="18sp"
                        android:text="@string/txt_gen4"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewHora3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/txt_gen5"
                        android:textSize="20sp" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </TableRow>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="55dp"
                    android:src="@drawable/imagenero3"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/textViewHora44"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:text="@string/txt_gen6"/>
                </TableRow>

            </TableLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>